# data-mining-t2-2025

./: README.md  main.py  pyproject.toml
EDA/: campaign_metadata.csv  eda_data_mining.ipynb  ringkasan_binning.csv  statistik_per_campaign.csv
data-preparation/: clean_training_data.py  data_preparation.ipynb  data_preparation_eval.ipynb  data_preparation_result.csv  engineer_features.py
data-preparation/result/: data_preparation_clean.csv  data_preparation_eval_result.csv  data_preparation_features.csv  data_preparation_result_80.csv  final_eval_results.csv  final_eval_summary.rds  improved_dirichlet_model.rds  improved_mape_results.csv  improved_model_summary.rds  outliers_removed.json
dataset/: donors_amaljariyahpembangunanmasjidalmuniri_20251221_125413.csv  donors_donasimasjidalfurqon1750_20251221_100244.csv  donors_masjidalakbarsorong_20251221_101252.csv  donors_masjidario_20251221_124111.csv  donors_masjidrumahtahfiz_20251221_124621.csv  donors_masjidseko_20251221_113301.csv  donors_pahalajariyahwakafpembangunanmasjid_20251221_092111.csv  donors_pembangunanmasjidmuhammadiyahalmujahidin_20251221_124431.csv  donors_pembangunanmasjidtapalbatas_20251221_125448.csv  donors_sedekahmasjidpantaibali_20251221_124938.csv
docs/: FINAL_MODEL.md  campaigns_to_scrape.txt  scraping_stats.json
masjidkemasjid/: donors_20251221_025520.json
script/: EV_calculations.ipynb  dirichlet_ev_model.R  evaluate_improved_model.R  final_eval_test.R  generate_comparison_tables.R  train_improved_model.R  train_val_split_evaluation.R  training_error_diagnostic.R
(+151 files in other folders)
