[project]
name = "data-mining-t2-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "tqdm>=4.66.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
]
